<resources>
    <string name="app_name">Pollution</string>
    <string name="title_activity_maps">Map</string>
    <string name="enter_a_city_name">Enter a city name</string>
    <string name="picture_of_magnifying_glass">Picture of magnifying glass</string>
    <string name="list_title">Settings</string>
    <string name="bravo">Balanced. As all things should be.</string>
    <string name="settings">Settings</string>
    <string name="menu_item_favorites">Favorites</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_alerts">Alerts</string>
    <string name="menu_item_home">Home</string>
    <string name="menu">menu</string>
    <string name="marker_oslo">Oslo</string>
    <string name="settings_theme_desc">Turn on Dark Mode.</string>
    <string name="settings_theme_title">Theme</string>
    <string name="settings_alert_desc">Get notified when values are above threshold.</string>
    <string name="settings_alert_title">Alerts</string>
    <string name="settings_alert_on">Alerts are disabled.</string>
    <string name="settings_alert_off">Alerts are enabled.</string>
    <string name="settings_language_title">Language</string>
    <string name="settings_language_desc">The displayed language of the app</string>
    <string name="settings_version_desc">Current version: 0.03</string>
    <string name="forecast_example_text">TextView</string>
    <string name="forecast_value_1">1</string>
    <string name="forecast_value_2">2</string>
    <string name="forecast_value_3">3</string>
    <string name="forecast_unit_time">Unit Time</string>
    <string name="channel_desc">Alerts</string>
    <string name="enter_limit">Enter limit</string>
    <string name="notification_title">Current air quality is exceeding your limit!</string>
    <string name="notification_desc">Consider planning an escape route!</string>
    <string name="forecast_card1_title">Add a location</string>
    <string name="forecast_card2_title">Add a location:</string>
    <string name="card_comp_title">Difference</string>
    <string name="menu_4_graph">Graph</string>
    <string name="menu_stats">Stats</string>

    <!-- Please insert any new additions below -->

    <string name="settings_threshold_title">Set threshold</string>
    <string name="alert_title">Alert</string>
    <string name="alert_threshold_title">Set threshold</string>
    <string name="alert_threshold_desc">Should the current AQI value exceed your threshold, the app will send an alert.</string>
    <string name="alert_dnd_title">Do not disturb</string>
    <string name="alert_dnd_desc">Do not disturb for a short period of time.</string>
    <string name="aqi_good">Good</string>
    <string name="aqi_moderate">Moderate</string>
    <string name="aqi_potentially_unhealthy">Unhealthy for Sensitive Groups</string>
    <string name="aqi_unhealthy">Unhealthy</string>
    <string name="aqi_very_unhealthy">Very Unhealthy</string>
    <string name="aqi_hazardous">Hazardous</string>
    <string name="dnd_title">How long would you like to disable alerts?</string>
    <string name="one_hour">One Hour</string>
    <string name="three_hours">Three Hours</string>
    <string name="one_day">One Day</string>
    <string name="one_week">One Week</string>
    <string name="one_month">One Month</string>
    <string name="dnd_exit">OK</string>
    <string name="disable_alerts">Alerts disabled for %1$s.</string>
    <string name="cancel_disable_alerts">Do not disturb cancelled.</string>
    <string name="alert_week_title">Time periods to ignore</string>
    <string name="alert_week_desc">Select specific time periods of days of the week for the app to be silent.</string>
    <string name="week_title">Select time frames for the app to be silent:</string>
    <string name="alert_week_unavailable_title">Unsupported API level.</string>
    <string name="alert_week_unavailable_desc">This function requires API level 23.</string>
    <string name="alert_week_unavailable_dismiss">OK</string>
    <string name="week_monday">Monday</string>
    <string name="week_tuesday">Tuesday</string>
    <string name="week_wednesday">Wednesday</string>
    <string name="week_thursday">Thursday</string>
    <string name="week_friday">Friday</string>
    <string name="week_saturday">Saturday</string>
    <string name="week_sunday">Sunday</string>
    <string name="week_monday_pl">mondays</string>
    <string name="week_tuesday_pl">tuesdays</string>
    <string name="week_wednesday_pl">wednesdays</string>
    <string name="week_thursday_pl">thursdays</string>
    <string name="week_friday_pl">fridays</string>
    <string name="week_saturday_pl">saturdays</string>
    <string name="week_sunday_pl">sundays</string>
    <string name="alert_time">Between %1$d and %2$d.</string>
    <string name="no_alert_weekday">You won\'t be notified between %1$d and %2$d on %3$s.</string>
    <string name="allow_alert_weekday">You can be notified anytime on %1$s.</string>

    <string name="forecast_unit_time">Unit Time</string>
    <string name="channel_desc">Alerts</string>
    <string name="enter_limit">Enter limit</string>
    <string name="notification_title">Current air quality is exceeding your limit!</string>
    <string name="notification_desc">Consider planning an escape route!</string>
    <string name="forecast_card1_title">Add a location</string>
    <string name="forecast_card2_title">Add a location:</string>
    <string name="card_comp_title">Difference</string>
    <string name="menu_4_graph">Graph</string>
    <string name="menu_stats">Stats</string>
    <string name="forecast_unit_aqi">AQI</string>
    <string name="forecast_unit_o3">O3</string>
    <string name="forecast_unit_no2">NO2</string>
    <string name="forecast_unit_pm10">PM 10</string>
    <string name="forecast_unit_pm25">PM 2.5</string>
    <string name="forecast_card1_graph">View graph</string>
    <string name="forecast_card_graph">Open graph</string>
</resources>
