<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <!-- Units -->
    <TextView
            android:id="@+id/forecast_unit_time"
            android:text="@string/forecast_unit_time"
            android:textColor="?attr/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:id="@+id/forecast_unit_aqi"
            android:text="@string/forecast_unit_aqi"
            android:textColor="?attr/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/forecast_unit_time"/>
    <TextView
            android:id="@+id/forecast_unit_pm25"
            android:text="@string/forecast_unit_pm25"
            android:textColor="?attr/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/forecast_unit_aqi"/>
    <TextView
            android:id="@+id/forecast_unit_pm10"
            android:text="@string/forecast_unit_pm10"
            android:textColor="?attr/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/forecast_unit_pm25"/>
    <TextView
            android:id="@+id/forecast_unit_no2"
            android:text="@string/forecast_unit_no2"
            android:textColor="?attr/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/forecast_unit_pm10"/>
    <TextView
            android:id="@+id/forecast_unit_o3"
            android:text="@string/forecast_unit_o3"
            android:textColor="?attr/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/forecast_unit_no2"/>
</android.support.constraint.ConstraintLayout>