<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize" android:id="@+id/toolbarAlert"/>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="115dp">

        <TextView
                android:text="@string/alert_threshold_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/AlertThresholdTitle"
                android:textColor="?attr/textColor"
                android:textSize="16sp"
                android:textStyle="bold" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:text="@string/alert_threshold_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/AlertThresholdDesc"
                android:textColor="?attr/textColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/seekBarThreshold" android:layout_marginStart="8dp"
                android:layout_marginBottom="16dp"/>
        <SeekBar
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:id="@+id/seekBarThreshold"
                android:max="500" android:progress="100"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:progressDrawable="@drawable/aqi_levels"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="60dp" android:id="@+id/constraintLayout">

        <TextView
                android:text="@string/alert_dnd_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/AlertDnDTitle"
                android:textColor="?attr/textColor"
                android:textSize="16sp"
                android:textStyle="bold" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/AlertDnDDesc" android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:text="@string/alert_dnd_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/AlertDnDDesc"
                android:textColor="?attr/textColor"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="parent"
        />
        <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/switchDnD"
                android:layout_marginStart="92dp" app:layout_constraintStart_toEndOf="@+id/AlertDnDDesc"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="12dp"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="105dp">

        <Button
                android:layout_width="411dp"
                android:layout_height="102dp" android:id="@+id/buttonWeek" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" tools:visibility="visible"
                android:visibility="visible"/>
        <TextView
                android:text="@string/alert_week_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/AlertWeekTitle"
                android:textColor="?attr/textColor"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/AlertWeekDesc"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
        <TextView
                android:text="@string/alert_week_desc"
                android:layout_width="392dp"
                android:layout_height="42dp" android:id="@+id/AlertWeekDesc"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="12dp"/>
    </android.support.constraint.ConstraintLayout>
</LinearLayout>