<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        tools:context=".ui.SettingsActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/backgroundColor">

    <include
            layout="@layout/toolbar"
            android:id="@+id/settings_toolbar">
    </include>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/settingsThemeTitle"
                android:text="@string/settings_theme_title"
                android:textColor="?attr/textColor"
                android:layout_width="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toTopOf="@+id/settings_theme_desc"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/settings_theme_desc"
                android:text="@string/settings_theme_desc"
                android:textColor="?attr/textColor"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@+id/settingsThemeTitle"
        />
        <Switch
                android:id="@+id/settingsThemeBtn"
                android:textColor="?attr/textColor"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
        />

    </android.support.constraint.ConstraintLayout>

    <!-- Alerts -->
    <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                 android:layout_height="wrap_content">
        <TextView
                android:id="@+id/settingsAlertTitle"
                android:text="@string/settings_alert_title"
                android:layout_width="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="?attr/textColor"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toTopOf="@+id/settingsAlertDesc"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/settingsAlertDesc"
                android:text="@string/settings_alert_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/textColor"

                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@+id/settingsAlertTitle"
        />
        <Switch
                android:id="@+id/settingsAlertBtn"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textColor="?attr/textColor"
        />
    </android.support.constraint.ConstraintLayout>

    <!-- Threshold -->

    <!-- Language -->
    <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                 android:layout_height="wrap_content">
        <TextView
                android:id="@+id/settingsLanguageTitle"
                android:text="@string/settings_language_title"
                android:layout_width="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="?attr/textColor"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content"/>
        <Spinner
                android:layout_width="200dp"
                android:layout_height="43dp"
                android:id="@+id/spinner" android:layout_marginTop="7dp"
                app:layout_constraintTop_toBottomOf="@+id/settingsLanguageTitle"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown" app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="0.0"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                 android:layout_height="wrap_content"
                                                 app:layout_constraintStart_toStartOf="parent"
                                                 app:layout_constraintEnd_toEndOf="parent">
        <TextView
                android:id="@+id/settingsVersionDesc"
                android:text="@string/settings_version_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/textColor"

                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
        />
    </android.support.constraint.ConstraintLayout>
</LinearLayout>