<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize" android:id="@+id/toolbar"/>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="85.71428571428571dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/monday">

        <TextView
                android:text="@string/week_monday"
                android:textColor="?attr/textColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textViewMonday"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
        <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/switchMonday"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="96dp"/>
        <com.yahoo.mobile.client.android.util.rangeseekbar.RangeSeekBar
                android:layout_width="@+id/monday"
                android:layout_height="wrap_content" android:id="@+id/seekBarMonday"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="12dp" android:layout_marginStart="8dp"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="85.71428571428571dp" android:id="@+id/tuesday">

        <TextView
                android:text="@string/week_tuesday"
                android:textColor="?attr/textColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textViewTuesday"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
        <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/switchTuesday"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="96dp"/>

        <com.yahoo.mobile.client.android.util.rangeseekbar.RangeSeekBar
                android:layout_width="@+id/tuesday"
                android:layout_height="wrap_content" android:id="@+id/seekBarTuesday"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="12dp" android:layout_marginStart="8dp"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="85.71428571428571dp" android:id="@+id/wednesday">

        <TextView
                android:text="@string/week_wednesday"
                android:textColor="?attr/textColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textViewWednesday"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
        <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/switchWednesday"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="96dp"/>
        <com.yahoo.mobile.client.android.util.rangeseekbar.RangeSeekBar
                android:layout_width="@+id/wednesday"
                android:layout_height="wrap_content" android:id="@+id/seekBarWednesday"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="12dp" android:layout_marginStart="8dp"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="85.71428571428571dp" android:id="@+id/thursday">

        <TextView
                android:text="@string/week_thursday"
                android:textColor="?attr/textColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textViewThursday"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
        <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/switchThursday"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="96dp"/>
        <com.yahoo.mobile.client.android.util.rangeseekbar.RangeSeekBar
                android:layout_width="@+id/thursday"
                android:layout_height="wrap_content" android:id="@+id/seekBarThursday"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="12dp" android:layout_marginStart="8dp"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="85.71428571428571dp" android:id="@+id/friday">

        <TextView
                android:text="@string/week_friday"
                android:textColor="?attr/textColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textViewFriday"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
        <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/switchFriday"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="96dp"/>
        <com.yahoo.mobile.client.android.util.rangeseekbar.RangeSeekBar
                android:layout_width="@+id/friday"
                android:layout_height="wrap_content" android:id="@+id/seekBarFriday"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="12dp" android:layout_marginStart="8dp"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="85.71428571428571dp" android:id="@+id/saturday">

        <TextView
                android:text="@string/week_saturday"
                android:textColor="?attr/textColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textViewSaturday"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
        <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/switchSaturday"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="96dp"/>
        <com.yahoo.mobile.client.android.util.rangeseekbar.RangeSeekBar
                android:layout_width="@+id/saturday"
                android:layout_height="wrap_content" android:id="@+id/seekBarSaturday"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="12dp" android:layout_marginStart="8dp"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="85.71428571428571dp" android:id="@+id/sunday">

        <TextView
                android:text="@string/week_sunday"
                android:textColor="?attr/textColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textViewSunday"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
        <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/switchSunday"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="96dp" android:layout_marginTop="8dp"/>
        <com.yahoo.mobile.client.android.util.rangeseekbar.RangeSeekBar
                android:layout_width="@+id/sunday"
                android:layout_height="wrap_content" android:id="@+id/seekBarSunday"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="12dp" android:layout_marginStart="8dp"/>
    </android.support.constraint.ConstraintLayout>
</LinearLayout>